crates/oxc_linter/src/snapshots/import_no_named_as_default_member.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ import(no-named-as-default-member): "baz" also has a named export "a"
   ╭─[index.js:1:46]
 1 │ import baz from "./named-exports"; const a = baz.a;
   ·                                              ─────
   ╰────
  help: Check if you meant to write `import { a } from "./named-exports"`

  ⚠ import(no-named-as-default-member): "baz" also has a named export "a"
   ╭─[index.js:1:46]
 1 │ import baz from "./named-exports"; const a = baz["a"];
   ·                                              ────────
   ╰────
  help: Check if you meant to write `import { a } from "./named-exports"`

  ⚠ import(no-named-as-default-member): "baz" also has a named export "a"
   ╭─[index.js:1:36]
 1 │ import baz from "./named-exports"; baz.a();
   ·                                    ─────
   ╰────
  help: Check if you meant to write `import { a } from "./named-exports"`

  ⚠ import(no-named-as-default-member): "baz" also has a named export "a"
   ╭─[index.js:3:23]
 2 │         {
 3 │             const a = baz.a;
   ·                       ─────
 4 │         }
   ╰────
  help: Check if you meant to write `import { a } from "./named-exports"`

  ⚠ import(no-named-as-default-member): "baz" also has a named export "a"
   ╭─[index.js:1:51]
 1 │ import baz, { bar } from "./named-exports"; const {a} = baz
   ·                                                   ─────────
   ╰────
  help: Check if you meant to write `import { a } from "./named-exports"`

  ⚠ import(no-named-as-default-member): "baz" also has a named export "foo"
   ╭─[index.js:1:53]
 1 │ import baz from "./named-and-default-export"; const {foo: _foo} = baz
   ·                                                     ─────────────────
   ╰────
  help: Check if you meant to write `import { foo } from "./named-and-default-export"`
