crates/oxc_linter/src/snapshots/import_no_namespace.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ import(no-namespace): Usage of namespaced aka wildcard "*" imports prohibited
   ╭─[index.js:1:13]
 1 │ import * as foo from 'foo';
   ·             ───
   ╰────
  help: Use named or default imports

  ⚠ import(no-namespace): Usage of namespaced aka wildcard "*" imports prohibited
   ╭─[index.js:1:28]
 1 │ import defaultExport, * as foo from 'foo';
   ·                            ───
   ╰────
  help: Use named or default imports

  ⚠ import(no-namespace): Usage of namespaced aka wildcard "*" imports prohibited
   ╭─[index.js:1:13]
 1 │ import * as foo from './foo';
   ·             ───
   ╰────
  help: Use named or default imports

  ⚠ import(no-namespace): Usage of namespaced aka wildcard "*" imports prohibited
   ╭─[index.js:3:25]
 2 │             import * as zod from 'zod'
 3 │             import * as DrizzleKit from 'drizzle-kit/api'
   ·                         ──────────
 4 │             
   ╰────
  help: Use named or default imports

  ⚠ import(no-namespace): Usage of namespaced aka wildcard "*" imports prohibited
   ╭─[index.js:1:13]
 1 │ import * as schema from './src/db/schema'
   ·             ──────
   ╰────
  help: Use named or default imports
