crates/oxc_linter/src/snapshots/import_no_nodejs_modules.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `"node:\ud800"`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import x from "node:\uD800"
   · ───────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `"node:\udc00"`
   ╭─[no_nodejs_modules.tsx:1:9]
 1 │ var x = require("node:\uDC00")
   ·         ──────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:😀`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import x from "node:\uD83D\uDE00"
   · ─────────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `path`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import path from "path"
   · ───────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import fs from "fs"
   · ───────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `path`
   ╭─[no_nodejs_modules.tsx:1:12]
 1 │ var path = require("path")
   ·            ───────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:10]
 1 │ var fs = require("fs")
   ·          ─────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import(`fs`)
   · ────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import fs from "fs"
   · ───────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `crypto`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import crypto from "crypto"
   · ───────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `util`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import("util")
   · ──────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ export * from "fs"
   · ──────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:path`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import path from "node:path"
   · ────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:path`
   ╭─[no_nodejs_modules.tsx:1:12]
 1 │ var path = require("node:path")
   ·            ────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import fs from "node:fs"
   · ────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:fs`
   ╭─[no_nodejs_modules.tsx:1:10]
 1 │ var fs = require("node:fs")
   ·          ──────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:crypto`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import crypto from "node:crypto"
   · ────────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import("node:fs")
   · ─────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:path`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ export { foo } from "node:path"
   · ───────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:util`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import util = require("node:util")
   · ──────────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import fs from "node:fs"
   · ────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `node:crypto`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import("node:crypto")
   · ─────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import fs = require("fs")
   · ─────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `path`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ import path = require("path")
   · ─────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `fs`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ export { foo } from "fs"
   · ────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `crypto`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ export { default as foo } from "crypto"
   · ───────────────────────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.

  ⚠ import(no-nodejs-modules): Do not import Node.js builtin module `path`
   ╭─[no_nodejs_modules.tsx:1:1]
 1 │ export * from "path"
   · ────────────────────
   ╰────
  help: Use a browser-compatible alternative or add this module to the `allow` list if Node.js usage is intentional.
