crates/oxc_linter/src/snapshots/import_no_self_import.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ eslint-plugin-import(no-self-import): A module importing itself is not allowed
   ╭─[no-self-import.js:1:17]
 1 │ import bar from './no-self-import'
   ·                 ──────────────────
   ╰────
  help: Remove this import. A module should not import itself.
