crates/oxc_linter/src/snapshots/import_no_unassigned_import.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './\uD800.css'
   · ─────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): A `require()` style import is forbidden.
   ╭─[no-unassigned-import.js:1:1]
 1 │ require('./\uD800.css')
   · ───────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './\uD800.css'
   · ─────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): A `require()` style import is forbidden.
   ╭─[no-unassigned-import.js:1:1]
 1 │ require('./\uD800.css')
   · ───────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './\uD800.css'
   · ─────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './\uD800.css'
   · ─────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): A `require()` style import is forbidden.
   ╭─[no-unassigned-import.js:1:1]
 1 │ require('./\uD800.css')
   · ───────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): A `require()` style import is forbidden.
   ╭─[no-unassigned-import.js:1:1]
 1 │ require('should')
   · ─────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import 'foo'
   · ────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './styles/app.css'
   · ─────────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './app.css'
   · ──────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './app.css'
   · ──────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): Imported module should be assigned
   ╭─[no-unassigned-import.js:1:1]
 1 │ import './app.js'
   · ─────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.

  ⚠ import(no-unassigned-import): A `require()` style import is forbidden.
   ╭─[no-unassigned-import.js:1:1]
 1 │ require('./app.css')
   · ────────────────────
   ╰────
  help: Consider assigning the import to a variable or removing it if it's unused.
